k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: warproject
  name: warproject
spec:
  replicas: 1
  selector:
    matchLabels:
      app: warproject
  template:
    metadata:
      labels:
        app: warproject
    spec:
      containers:
        - image: quay.io/rohanp/warproject
          imagePullPolicy: Always
          name: sonarqube
          ports:
            - containerPort: 8080
              protocol: TCP
            - containerPort: 9090
              protocol: TCP
